Update the readme to md

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+## Blast with your camera --swift
+---
 a app written in swift for taking pictures from the sequences,and then extract the seq by a ocrtool,then we push the seqence to the ncbi blast,the return result will be handled to adapt the screen fine.yes,this is useless for now,but who knows the next step?
 
 the app can be devided to 2 parts,one is the swift code, the other is some php file in server. Thanks Alamofire and SwiftyJson,they make this work not that tough for me.
